--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -124,7 +124,7 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "HelveticaNeue", "Helvetica Neue", "PT Sans". Helvetica, Arial, sans-serif;
   color: #222; }
 
 
@@ -527,16 +527,20 @@ section {
     margin-top: 60vh;
     padding: 20px;
     background-color: rgba(0,0,0,0.4);
+    font: 'PT Sans', sans-serif,;
 }
 
 .site-title h1{
+    font-weight: 700;
     font-size: 10rem;
 }
 
 .site-title p {
-    font-size: 4rem;
-    font-weight: thin;
-    margin-top: -40px;
+    font-size: 3rem;
+    font-weight: 400;
+    margin-top: -30px;
+    text-transform: uppercase
+        
 }
 /*.feature-image { 
     position: absolute;
