--- a/_layout/default.html
+++ b/_layout/default.html
@@ -30,24 +30,13 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".na\
-v-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">{{ site.name }}</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="/">Home</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+<section class="u-full-width" id="header" style="-webkit-transform: translate3d(0px, 0px, 0px); opacity: 1;">
+
+    <div class="site-title">
+        <h1 class="title">{{ site.name }}</h1>
+        <p class="tagline">{{ site.description }}</p>
+    </div> 
+</section>
 
     <div class="container">
 
