--- a/_layout/default1.html
+++ b/_layout/default1.html
@@ -30,7 +30,7 @@
 
   <body>
 
-<section class="u-full-width" id="header" style="-webkit-transform: translate3d(0px, 0px, 0px); opacity: 1;">
+<section class="u-full-width" id="header" style="background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)), url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
 
     <div class="site-title">
         <h1 class="title">{{ site.name }}</h1>
