--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -166,7 +166,7 @@
                 <h4 class="institution">{{ publications.publisher }}</h4>
             </div>
          <div class="seven columns">
-            <h3>{{ publications.title</h3>
+            <h3>{{ publications.title }}</h3>
         
         <p class="authors">{{ publications.authors }}</p>
             
