--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,16 @@
 
     <!-- content start -->
 
+    <div class="page-content">
+      <div class="wrapper">
         {{ content }}
+      </div>
+    </div>
 
     <!-- content end -->
 
+    {% include footer.html %}
+    {% include javascripts.html %}
 
   </body>
 
