--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
 
-    {% include header.html %}
-
-    <!-- content start -->
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-
-    <!-- content end -->
+   {% include header.html %}
+    
+    {{ content }}
 
     {% include footer.html %}
-    {% include javascripts.html %}
 
-  </body>
+</body>
 
 </html>
