--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,5 @@
-<footer class="site-footer">
+<footer>
 
-
-      <div class="container">
-        <p class="text">{{ site.description }}</p>
-      </div>
+    <div class="u-full-width" id="footer">All content Copyright Tim Klapdor 2015</div>
    
 </footer>
