--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="u-full-width" id="header">
 <div class="site-title"></div>
     <div class="site-title-text">
-        <h1 class="title">Tim Klapdor</h1>
-        <p class="tagline">Technology | Design | Education</p>
+        <h1 class="title">{{ site.title }}</h1>
+        <p class="tagline">{{ site.tagline }}</p>
     </div>
     
 </header>
