Attempt to clean up and make this more "forkable"

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
 
-    <div class="u-full-width" id="footer">All content Copyright Tim Klapdor 2015</div>
+    <div class="u-full-width" id="footer">All content Copyright Your Stuff if you want 2015</div>
    
 </footer>
