--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -519,7 +519,7 @@ section {
 }
 
 #header {
-    background-image: url(../images/tim-hd.jpg);
+    background-image: url(../images/2-squawk_24394345845_o.jpg);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
