--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,6 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
  <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
-  <link rel="icon" type="image/png" href="{{ "/images/favicon.png" | prepend: site.baseul }}">
+  <link rel="icon" type="image/png" href="{{ "/images/favicon.png" | prepend: site.baseurl }}">
 
 </head>
