--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -519,7 +519,7 @@ section {
 }
 
 #header {
-    background-image: url(../images/2-squawk_24394345845_o.jpg);
+    background-image: url(../images/{{ site.bgimage }});
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -558,21 +558,3 @@ section {
     text-transform: uppercase
         
 }
-
-/*.feature-image { 
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-image: url(images/silicon-valley.jpg);
-    background-size: cover;
-    background-color: #000000;
-}
-
-.header-content {
-      position: absolute;
-      top: 100%;
-      width: 100%;
-      height: 200px;
-      background: yellow;
-    }
-
